supposedly fix blue thingy which appears when you press on mobile

--- a/style.less
+++ b/style.less
@@ -83,6 +83,7 @@ body {
 
     user-select: none;
     -moz-user-select: none;
+    -webkit-tap-highlight-color: transparent;
     //font-size: 24px;
 }
 
